--- a/WiredBrainCoffeeAdmin/Properties/launchSettings.json
+++ b/WiredBrainCoffeeAdmin/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7092;http://localhost:5092",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Prodcution"
       }
     },
     "IIS Express": {
